[tool.poetry]
name = "Cancer-prediction-jx315"
version = "0.1.0"
description = "A package to detect cancer"
authors = ["J. Xian <122625488+Katrina-JiaqiXian@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
packages = [{include = "cancer_prediction"}]

[tool.poetry.scripts]
cancer-prediction = "cancer_prediction.cli:app"


[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
black = "^24.10.0"
streamlit = "^1.40.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
